--- a/Puzzle/styles.css
+++ b/Puzzle/styles.css
@@ -1,30 +1,46 @@
+.*{
+  box-sizing: border-box;
+}
+
+
 .grid-container{
-  width: 100vw;
-  height: 100vw;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 60%;
+  height: 100%;
+  margin-left: 20%;
   display: grid;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 20px;
   justify-content: center;
   align-content: center;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
 
 }
 
-.grid-container div{
-  width: 50px;
-  height: 50px;
-  background-color: red;
-  border:20px;
-  border-color: white;
+.grid-item{
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border: 1px solid black;
   text-align: center;
   position: relative;
 }
 
 .ip{
+  border-radius: 0px;
   text-align: center;
-  height: 50px;
-  width: 50px;
+  height: 25px;
+  width: 25px;
   font-size: 1.2em;
+  border: 0px;
   text-transform: capitalize;
 
+}
+
+.bot{
+  margin-left: 80%;
 }
 
 .txt{
