--- a/Puzzle/styles.css
+++ b/Puzzle/styles.css
@@ -6,15 +6,20 @@
 .grid-container{
   margin-top: 20px;
   margin-bottom: 20px;
-  width: 100%;
-  height: 100%;
+  width: 320px;
+  height: 320px;
   display: grid;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 20px;
+  padding-left: 20px;
   justify-content: center;
   align-content: center;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+
+}
+
+@media  {
 
 }
 
@@ -47,5 +52,5 @@
   top: 1px;
   left: 2px;
   margin-top: 0px;
-  font-size: 0.6em;
+  font-size: 0.4em;
 }
