--- a/Puzzle/styles.css
+++ b/Puzzle/styles.css
@@ -13,6 +13,8 @@
   padding-bottom: 20px;
   padding-right: 20px;
   padding-left: 20px;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: center;
   align-content: center;
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
@@ -52,5 +54,5 @@
   top: 1px;
   left: 2px;
   margin-top: 0px;
-  font-size: 0.4em;
+  font-size: 0.5em;
 }
