--- a/Puzzle/styles.css
+++ b/Puzzle/styles.css
@@ -20,8 +20,15 @@
   grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
 
 }
+#not{
+  margin-top: 50px;
+  padding-bottom: 30px;
+  color: red;
+}
 
 @media  {
+
+
 
 }
 .heading{
